--- a/templates/home.html
+++ b/templates/home.html
@@ -32,7 +32,7 @@
       
       <div class="text-center">
       <button class="btn btn-primary btn-lg">Contact Us</button>
-          <b><p class="mt-4"> Copyright 2022, Jovian</p></b>
+          <p class="mt-4"><b>Copyright 2022, Jovian</b></p>
       </div>
     </div>
   </body>
