--- a/templates/jobitem.html
+++ b/templates/jobitem.html
@@ -13,7 +13,7 @@
     </div>
     {% endif %}
   </div>
-  <div class="col-2">
-  <button type="button" class="btn btn-outline-primary">Apply</button>
+  <div class="col-2 paddinf-right:16px">
+  <!--todo!!!!--> <a href="mailto:" type="button" class="btn btn-outline-primary">Apply</a>
   </div>
 </div>
