--- a/templates/home.html
+++ b/templates/home.html
@@ -6,10 +6,13 @@
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <style>
       #banner {
-        height: 360px;
-        width:100%;
-        object-fit:cover;
+        
+        width:max-content;
+        
+        object-fit:contain; 
         margin-bottom: 16px;
+      
+        
       }
     </style>
   </head>
